--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,10 @@ header ul {
   padding: 0;
   box-sizing: border-box;
 }
-header .navBar {
+header .desktop-navbar {
+  width: 100%;
+}
+header .desktop-navbar .navBar {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -49,7 +52,7 @@ header .navBar {
   border-bottom: 0.1875rem solid #470063;
   list-style: none;
 }
-header .navBar .dropdown .btn {
+header .desktop-navbar .navBar .dropdown .btn {
   box-shadow: 0 0 0 0;
 }
 header .navBar div {
@@ -892,9 +895,6 @@ nav ul div button.dropdown-toggle {
   .desktop-navbar {
     display: none;
   }
-  * {
-    transition: none !important;
-  }
   .mobile-navbar {
     display: flex;
     flex-direction: row;
@@ -903,13 +903,19 @@ nav ul div button.dropdown-toggle {
     gap: 0;
     background-color: #ffffff;
     border-bottom: 0.1875rem solid #470063;
-    padding: 0px 20px 0px 20px;
+    padding: 0;
+    width: 100%;
   }
   .mobile-navbar .show {
     z-index: 1050;
+    max-height: 500px;
   }
   .mobile-navbar .navbar-toggler-icon {
     background-image: url(../assets/img/Hamburguesa.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
   }
   .mobile-navbar .navbar-toggler {
     padding: 0;
@@ -919,10 +925,15 @@ nav ul div button.dropdown-toggle {
     transition: none;
     overflow: hidden;
   }
+  .mobile-navbar .navbar-collapse {
+    position: absolute;
+    transition: none !important;
+  }
   .mobile-navbar .container-fluid {
-    width: 33%;
+    width: 25%;
     margin-right: 0;
     padding-right: 0;
+    position: relative;
   }
   .mobile-navbar .container-fluid .collapse {
     position: absolute;
@@ -930,14 +941,15 @@ nav ul div button.dropdown-toggle {
   }
   .mobile-navbar .container-fluid .collapse .navbar-nav {
     background-color: #ffffff;
-    height: 100%;
+    margin: 0 !important;
     padding-left: 15px;
     padding-right: 15px;
     width: 100%;
     border-radius: 10%;
   }
   .mobile-navbar .container-fluid .collapse .navbar-nav .dropdown-menu {
-    width: 100%;
+    width: auto;
+    max-width: 350px;
     box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.15), inset 0px -1px 2px rgba(255, 255, 255, 0.6);
   }
   .mobile-navbar .container-fluid .collapse .navbar-nav .coleccion-link {
@@ -957,15 +969,18 @@ nav ul div button.dropdown-toggle {
     color: #470063;
   }
   .mobile-navbar .logo-mobile {
-    width: 33%;
+    width: 50%;
   }
   .mobile-navbar .logo-mobile a .navbar-brand {
     position: relative;
     top: 20px;
+    left: 13%;
     height: auto;
+    margin: 0;
+    padding: 0;
   }
   .mobile-navbar .divCesta {
-    width: 33%;
+    width: 25%;
     display: flex;
     align-items: center;
     height: 69px;
