--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,21 +14,25 @@ header{
         box-sizing: border-box;
     }
 
-    .navBar{
-        @include flex(row, space-around, center, 30px);
-        background-color: #ffffff;
-        font-size: map-get($medidas, parrafo);
+    .desktop-navbar{
         width: 100%;
-        height: 4.375rem;
-        border-bottom: .1875rem solid #470063;
-        list-style: none;
-
-        .dropdown{
-            .btn{
-                box-shadow: 0 0 0 0;
+        .navBar{
+            @include flex(row, space-around, center, 30px);
+            background-color: #ffffff;
+            font-size: map-get($medidas, parrafo);
+            width: 100%;
+            height: 4.375rem;
+            border-bottom: .1875rem solid #470063;
+            list-style: none;
+    
+            .dropdown{
+                .btn{
+                    box-shadow: 0 0 0 0;
+                }
             }
         }
     }
+    
 
     .navBar div{
         @include flex(row, space-between, center, 30px);
