--- a/scss/layout/media/_media1180.scss
+++ b/scss/layout/media/_media1180.scss
@@ -32,21 +32,23 @@
     .desktop-navbar {
         display: none;
     }
-
-    *{
-        transition: none !important;
-     }
     .mobile-navbar {
         @include flex(row, space-between, center, 0);
         background-color: #ffffff;
         border-bottom: .1875rem solid #470063;
-        padding: 0px 20px 0px 20px;
+        padding: 0;
+        width: 100%;
         .show {
             z-index: 1050;
+            max-height: 500px;
         }
 
         .navbar-toggler-icon{
             background-image: url(../assets/img/Hamburguesa.svg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            width: 30px;
+            height: 30px;
         }
         .navbar-toggler{
             padding: 0;
@@ -56,22 +58,28 @@
             transition: none;
             overflow: hidden;
         }
+        .navbar-collapse {
+            position: absolute;
+            transition: none !important;
+        }
         .container-fluid{
-            width: 33%;
+            width: 25%;
             margin-right: 0;
             padding-right: 0;
+            position: relative;
             .collapse{
                 position: absolute;
                 top: 100%;
                 .navbar-nav{
                     background-color: #ffffff;
-                    height: 100%;
+                    margin: 0 !important;
                     padding-left: 15px;
                     padding-right: 15px;
                     width: 100%;
                     border-radius: 10%;
                     .dropdown-menu{
-                        width: 100%;
+                        width: auto;
+                        max-width: 350px; 
                         box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.15),  
                         inset 0px -1px 2px rgba(255, 255, 255, 0.6); 
                     }
@@ -96,18 +104,21 @@
               
         }
         .logo-mobile{
-            width: 33%;
+            width: 50%;
             a{
                 .navbar-brand{
                     position: relative;
                     top: 20px;
+                    left: 13%;
                     height: auto;
+                    margin: 0;
+                    padding: 0;
                 }
             }
         }
 
         .divCesta{
-            width: 33%;
+            width: 25%;
             display: flex;
             align-items: center;
             height: 69px;
